# metropolis

./: .tool-versions  Procfile  README.md
config/: config.rb  local_config.rb
config/lib/: config.rb  temple_config.rb
docs/: book.toml
docs/src/: SUMMARY.md  handbook.md  intro.md  projects.md
gymnasium/: .gitignore  README.md  mix.exs
gymnasium/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
gymnasium/lib/: gymnasium.ex  gymnasium_grpc.ex  gymnasium_web.ex
gymnasium/test/: test_helper.exs
proto/: projects.proto
protobuf/: README.md  api_linter_config.json
temple/: Cargo.toml  README.md  build.rs
temple/foundation/: Cargo.toml
temple/foundation/src/: lib.rs  result.rs  tests.rs
temple/foundation/src/attribute_type/: create.rs  delete.rs  get.rs  list.rs  mod.rs  tests.rs  update.rs
temple/foundation/src/datastore/: mod.rs  model.rs  project.rs  tests.rs
temple/foundation/src/diagram/: mod.rs
temple/foundation/src/model/: create.rs  create_association.rs  create_attribute.rs  delete.rs  delete_association.rs  delete_attribute.rs  get.rs  get_class_diagram.rs  get_project_class_diagram.rs  list.rs  mod.rs  tests.rs
temple/foundation/src/project/: archive.rs  create.rs  delete.rs  get.rs  list.rs  list_archived.rs  mod.rs  rename.rs  restore.rs
temple/foundation/src/util/: mod.rs  string.rs  validator.rs
temple/mermaid/: Cargo.toml
temple/mermaid/src/: class_diagram.rs  lib.rs
temple/mermaid/tests/: class_diagram_test.rs
temple/mermaid/tests/resources/class_diagram/: book_associations.mermaid  book_classes.mermaid  book_full.mermaid
temple/portal/: Cargo.toml  build.rs  config.json.sample
temple/portal/src/: main.rs  repo.rs  result.rs  server.rs
temple/portal/src/config/: database.rs  mod.rs  server.rs
temple/portal/src/diagram/: mod.rs
temple/portal/src/repo/: attribute_types.rs  mod.rs  models.rs  projects.rs
temple/portal/src/server/: create_model.rs  mod.rs
temple/portal/src/servers/: mod.rs
temple/portal/src/servers/attribute_types_server/: mod.rs
temple/portal/src/servers/projects_server/: create_model.rs  create_model_attribute.rs  mod.rs
temple/portal/src/util/: proto.rs
temple/src/: config.rs  config2.rs  helpers.rs  main.rs  result.rs  server.rs
temple/src/client/: datastore.rs  mod.rs
temple/src/config/: datastore.rs  mod.rs
temple/src/datastore/: client.rs  mod.rs  project.rs  repo.rs
temple/src/model/: mod.rs  project.rs
temple/src/service/: check_project_details.rs  delete_project.rs  initialize_project.rs  mod.rs  recover_project.rs  rename_project.rs  setup_project_environment.rs  showcase_projects.rs
temple/src/util/: mod.rs
temple2/: Cargo.toml  build.rs
temple2/src/: main.rs  result.rs
theater/: .gitignore  .rubocop.yml  Gemfile  Procfile.deps  README.md
(+333 files in other folders)
