[workspace.package]
name = "temple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "foundation",
    "portal",
]

[workspace.dependencies]
async-trait = { version = "0.1.72" }
chrono = { version = "0.4.26" }
foundation = { path = "./foundation" }
sluggify = { version = "0.1.0" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }
uuid = { version = "1.4.1", features = ["v4"]}

